<resources>
    <string name="app_name">Unit convertor application</string>

    <string name="choose_source_unit">Choose Source Unit</string>
    <string name="enter_value">Enter a value</string>
    <string name="choose_target_unit">Choose Target Unit</string>
    <string name="convert">Convert</string>
    <string name="result_display">Result Display</string>
    <string name="invalid_input">Invalid Input</string>

    <!-- Add unit options -->
    <string-array name="length_units">
        <item>Meter</item>
        <item>Centimeter</item>
    </string-array>
</resources>