<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <Spinner
       android:id="@+id/sourceUnitSpinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:layout_marginBottom="8dp"
       android:prompt="@string/choose_source_unit" />

    <EditText
        android:id="@+id/sourceValueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_value"
        android:layout_below="@id/sourceUnitSpinner"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/targetUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sourceValueEditText"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:prompt="@string/choose_target_unit" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/targetUnitSpinner"
        android:layout_marginTop="16dp"
        android:text="@string/convert" />

    <EditText
        android:id="@+id/resultEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result_display"
        android:layout_below="@id/convertButton"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:inputType="none"
        android:focusable="false"
        android:clickable="false" />



</RelativeLayout>